sugar/tests/success/s0.mx
x : a * b, y : ~ a | ~ b |-
let v,w = x in
connect via y
    { i : ~a -> v <-> i
    ; j : ~b -> w <-> j
    }


