sugar/tests/fail/s0.mx
x : a * b, y : ~ a | ~ b |-
let v,w = x in
connect via y
    { i -> v <-> i
    ; j -> w <-> j
    }


